--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -24,6 +24,47 @@ body {
     font-style: italic;
 }
 
+.LoginHeader {
+    background-color: #fff;
+    background-size: auto;
+    width: 50%;
+    top: 0px;
+    text-align: center;
+    line-height: 60px; 
+    margin-left: 10%;
+    height: 60px;
+    font-size: 25px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-style: italic;
+}
+
+.LoginHeaderInfo {
+    float: right;
+    background-color: #fff;
+    background-size: auto;
+    width: 50%;
+    top: 0px;
+    text-align: center;
+    line-height: 60px;
+    height: 60px;
+    font-size: 25px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-style: italic;
+}
+
+.LogoutButton {
+    font-size: 16px;
+    color: #fff;
+    padding: 10px;
+    width: 60%;
+    background-color: #ff9d0a;
+    border-radius: 5px;
+    border: 0px;
+    font-weight: 600;
+}
+
 .MainBox {
     text-align: center;
     display: block;
