--- a/public/css/contents.css
+++ b/public/css/contents.css
@@ -36,7 +36,9 @@
 /********************************* SubContents *********************************/
 #contents {float:right;width:880px;text-align: left;}
 /* Visual */
-#contents .cont_visual {position:relative; width:100%; height:278px; padding:60px 0 0 70px; box-sizing:border-box; background: url(../img/content_visual_bg.gif) no-repeat left 0px;}
+#contents .cont_visual {position:relative; width:100%; height:278px; box-sizing:border-box;}
+#contents .cont_visual.student {background: url(../img/std_content_visual_bg.gif) no-repeat left 0px;  padding:60px 0 0 70px; }
+#contents .cont_visual.teacher {background: url(../img/tch_content_visual_bg.gif) no-repeat left 0px;  padding:60px 0 0 65px; }
 #contents .cont_visual p.eng {font-family: 'Montserrat', sans-serif; line-height:100%; color:#152842; font-style: italic;}
 #contents .cont_visual p.eng.small {font-weight:300; font-size:40px; letter-spacing: -0.05em;}
 #contents .cont_visual p.eng.big {font-weight:800; font-size:70px; letter-spacing: -0.01em;}
@@ -431,6 +433,8 @@ box-shadow: 3px 3px 10px 0px rgba(242,71,71,0.6);}
 .form_contents .rdw-editor-wrapper {
   width: 985px;
   float: right;
+  position: relative;
+  z-index: 0;
 }
 .react-date-picker {float:left;}
 .react-date-picker__wrapper {border:none !important;height: 45px;line-height: 45px;background: #eef1f7;font-weight: 600;padding: 0 15px 0 20px;border-radius: 5px;font-size: 14px;margin-right: 5px;}
@@ -464,7 +468,8 @@ box-shadow: 3px 3px 10px 0px rgba(242,71,71,0.6);}
 #test_warning_container .wrap .std_test_info ul li .eng {display:inline-block; font-family:'Lato', sans-serif; font-size:17px;}
 #test_warning_container .wrap .std_test_info ul li .eng span {color:#ffa525; font-size:20px;}
 #test_warning_container .wrap .std_test_info ul li.time {font-family:'Lato', sans-serif; font-size:18px; padding-left:50px; background:#152842 url(../img/test_warning_time_ico.gif) no-repeat 18px 50%;}
-#test_warning_container .wrap .std_test_info ul li.start_test_btn {background:#dd3619; }
+#test_warning_container .wrap .std_test_info ul li.start_test_btn.red {background:#dd3619; }
+#test_warning_container .wrap .std_test_info ul li.start_test_btn.gray {background:#a3b3d1; color:#1f1f36;}
 #test_warning_container .wrap .std_test_info ul li.start_test_btn a {display:inline-block; font-size:15px; color:#fff;}
 #test_warning_container .wrap .std_test_info .test_tit {font-size:36px;color:#152842;letter-spacing:-0.02em;margin: 40px 0 15px 0;position: relative;}
 #test_warning_container .wrap .std_test_info .test_tit span {font-family:'Lato', sans-serif; font-weight:800; letter-spacing:0px; font-size: 16px;display: inline-block;padding: 6px 12px;background: #dceaf6;border-radius: 10px;margin-left: 13px;/* border: 1px solid #a9c2d3; */position: absolute;bottom: 0;}
