--- a/public/css/contents.css
+++ b/public/css/contents.css
@@ -626,6 +626,7 @@ box-shadow: 0px 1px 6px 0px rgba(167, 179, 226, 0.3);}
 .test_screen_top ul {display: inline-block;}
 .test_screen_top ul li {float:left; color:#fff; font-size:15px; font-weight:600;}
 /* .test_screen_top ul li:first-child {color:#808089; padding-right:15px; margin-right:10px; background:url(../img/test_screen_top_arrow.gif) no-repeat right 50%;} */
+.test_screen_top .tch_notice {background:url(../img/teacher_notice_ico.gif) no-repeat left 50%; padding-left:30px; margin-left:50px;}
 .test_scren_nav {width:100%;height:70px; overflow: hidden;padding: 0 30px;box-sizing: border-box;border-bottom: 1px solid #dfdfdf;background: #f2f2f2;}
 .test_scren_nav .quiz_num {float:left;height:35px;line-height:35px;padding:0 25px;border-radius: 35px;border: 2px solid #c4c4c4;color: #152842;font-size:15px;font-weight:600;margin-top: 15px;}
 .test_scren_nav ul {overflow: hidden; float:right; margin-top:15px; color:#fff; line-height:35px;}
@@ -906,8 +907,9 @@ box-shadow: 3px 3px 10px 0px rgba(98,119,245,0.6);}
 .chatting_area ul li span {max-width:45%;word-break:keep-all;display: inline-block;padding: 10px 15px;color:#fff;line-height: 22px;}
 .chatting_area ul li.send {text-align:right;padding-right:14px;background: url(../img/chatting_bubble_send.png) no-repeat right bottom;}
 .chatting_area ul li.send span {text-align:left;border-radius: 10% 10% 0 10%;background:#3956e5;}
-.chatting_area ul li.receive {text-align:left; padding-left:14px; background: url(../img/chatting_bubble_receive.png) no-repeat left bottom;}
-.chatting_area ul li.receive span {border-radius:5% 5% 5% 0; background:#a6acce;}
+/* .chatting_area ul li.receive {text-align:left; padding-left:14px; background: url(../img/chatting_bubble_receive.png) no-repeat left bottom;}
+.chatting_area ul li.receive span {border-radius:5% 5% 5% 0; background:#a6acce;} */
+.chatting_area ul li.receive {display:none;}
 .chatting_send_input {position:absolute; bottom:0px; left:0px; width:100%; height:50px; background:#fff; border-top:1px solid #ededed;}
 .chatting_send_input input[type="text"] {float:left;height:50px;line-height:50px;width: 410px;padding:0 15px;box-sizing: border-box;}
 .chatting_send_input button {position:absolute; top:12px; right:12px; float:right;}
